kubernetes/ingress.in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edegal
  annotations: !Var ingress_annotations
spec:
  ingressClassName: !Var ingress_class_name
  tls: !Var ingress_tls
  rules:
    - host: !Var ingress_public_hostname
      http:
        paths:
          - pathType: Prefix
            path: /admin
            backend:
              service:
                name: edegal
                port:
                  number: 8000
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: edegal
                port:
                  number: 8000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx
                port:
                  number: 80
