kubernetes/ingress.in.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edegal
  annotations:
    !If
      test: !Var ingress_letsencrypt_enabled
      then:
        cert-manager.io/cluster-issuer: !Var ingress_letsencrypt_cluster_issuer
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - !If
        test: !Var ingress_letsencrypt_enabled
        then:
          hosts:
            - !Var ingress_public_hostname
          secretName: ingress-letsencrypt
  rules:
    - host: !Var ingress_public_hostname
      http:
        paths:
          - path: /admin
            backend:
              serviceName: edegal
              servicePort: 8000
          - path: /api
            backend:
              serviceName: edegal
              servicePort: 8000
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
